force-app/main/default/objects/Account/fields/Business_Number__c.field-meta.xml
<CustomField>
    <fullName>Business_Number__c</fullName>
    <description>사업자번호 (XXX-XX-XXXXX, 자동 하이픈 포맷팅). FR-LOC-004.</description>
    <label>사업자번호</label>
    <length>12</length>
    <type>Text</type>
</CustomField>