force-app/main/default/objects/Account/fields/CEO_Name__c.field-meta.xml
<CustomField>
    <fullName>CEO_Name__c</fullName>
    <description>대표자명.</description>
    <label>대표자명</label>
    <length>50</length>
    <type>Text</type>
</CustomField>