force-app/main/default/objects/Account/fields/Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>Credit_Limit__c</fullName>
    <description>신용 한도 (KRW). 정보 표시용 (NG-012, 차단 없음).</description>
    <label>신용 한도</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>