force-app/main/default/objects/Account/fields/External_Credit_Score__c.field-meta.xml
<CustomField>
    <fullName>External_Credit_Score__c</fullName>
    <description>외부 신용점수 (CompanyInfoApi). 0~999.</description>
    <label>외부 신용점수</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>