force-app/main/default/objects/Account/fields/Long_Term_Debtor__c.field-meta.xml
<CustomField>
    <fullName>Long_Term_Debtor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>180일+ 미수금 거래처 플래그. FR-AR-002.</description>
    <label>장기미수금 거래처</label>
    <type>Checkbox</type>
</CustomField>