force-app/main/default/objects/Account/fields/Total_AR__c.field-meta.xml
<CustomField>
    <fullName>Total_AR__c</fullName>
    <description>총 미수금 합계 (Apex 계산). FR-AR-003.</description>
    <label>총 미수금</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>